Varias modificaciones en horarios, configuración y Cita